examples/invalid/var_net.sv
module var_net;

logic a;

wire a;
   
endmodule
